src/logs/error/2022-07-14.log
2022-07-14 18:50:22 error: uncaughtException: Identifier 'tags' has already been declared
D:\Programming\Angular\ngrx\server\src\services\shopping-lists.service.ts:46
        const tags = await this.tagService.upsertMany(tags);
              ^

SyntaxError: Identifier 'tags' has already been declared
    at compileFunction (<anonymous>)
    at wrapSafe (internal/modules/cjs/loader.js:984:16)
    at Module._compile (internal/modules/cjs/loader.js:1032:27)
    at Module.m._compile (D:\Programming\Angular\ngrx\server\node_modules\ts-node\src\index.ts:1597:23)
    at Module._extensions..js (internal/modules/cjs/loader.js:1097:10)
    at Object.require.extensions.<computed> [as .ts] (D:\Programming\Angular\ngrx\server\node_modules\ts-node\src\index.ts:1600:12)
    at Module.load (internal/modules/cjs/loader.js:933:32)
    at Function.Module._load (internal/modules/cjs/loader.js:774:14)
    at Module.require (internal/modules/cjs/loader.js:957:19)
    at require (internal/modules/cjs/helpers.js:88:18)
2022-07-14 18:54:30 error: [GET] /api/auth/refresh-session >> StatusCode:: 401, Message:: Wrong authentication token
